--- a/.env
+++ b/.env
@@ -64,8 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-DB_PORT=3306
-DB_HOST=db
-DB_PASSWORD=db
-DB_DATABASE=db
-DB_USERNAME=db
+DB_PORT="3306"
+DB_HOST="db"
+DB_PASSWORD="db"
+DB_DATABASE="db"
+DB_USERNAME="db"
